[package]
name = "spotify-update"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.13.2", features = ["cli"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5.2"
webbrowser = "0.8.13"
thiserror = "1.0"
dotenv = "0.15"
futures = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
scraper = "0.20.0"
serde_json = "1.0"
serde = "1.0"